[gd_scene load_steps=2 format=3 uid="uid://xvia03h0hwcc"]

[ext_resource type="Script" path="res://main.gd" id="1_em0st"]

[node name="Main" type="Node"]
script = ExtResource("1_em0st")

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 71.0
offset_top = 357.0
offset_right = 118.0
offset_bottom = 380.0
text = "Name"

[node name="NameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 180.0
offset_top = 349.0
offset_right = 508.0
offset_bottom = 380.0

[node name="Host" type="Button" parent="."]
offset_left = 81.0
offset_top = 425.0
offset_right = 125.0
offset_bottom = 456.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 236.0
offset_top = 419.0
offset_right = 274.0
offset_bottom = 450.0
text = "Join"

[node name="Print" type="Button" parent="."]
offset_left = 397.0
offset_top = 426.0
offset_right = 443.0
offset_bottom = 457.0
text = "Print"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_top = 80.0
offset_bottom = 180.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../VBoxContainer")
spawn_limit = 4

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Print" to="." method="_on_print_pressed"]
